syntax = "proto3";

service Employee {
    rpc GetEmployee (EmployeeID) returns (EmployeeDetails);
    rpc CreateEmployee (EmployeeDetails) returns (EmployeeID);
}

message EmployeeDetails {
    string firstName = 1;
    string lastName = 2;
}

message EmployeeID{
    int32 id = 1;
}